2010-03-08	Michiel Roos <extensions@netcreators.com>

	* Fixed bug #6699: Restore faq_id to the id of the faq
	* Added feature #6696: Configure sorting order of faq items
	* Fixed bug #3048: Toggle doesn't work with singleOpen

2008-12-10	Dmitry Dulepov	<dmitry@typo3.org>

	* Added a call to tslib_cObj::lastChanged() to ensure correct "Last-modified" headers for pages with FAQ

2008-11-05	Dmitry Dulepov	<dmitry@typo3.org>

	* Fix: SQL errors if category mode is set to use categories but category list is empty

2008-10-03	Dmitry Dulepov	<dmitry@typo3.org>

	* Additional impovements for XHTML compatibility
	* Added <fieldset> in the search form

2008-10-02	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed forge bug #1444: irfaq does not produce XHTML valid output

2008-09-15	Dmitry Dulepov	<dmitry@typo3.org>

	* Added extension updater
	* Fixed missing </head> in the template
	* Released version 1.1.1

2008-09-01	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: wrong check for missing TS template
	* Removed duplicate $cObj from pi1 class
	* Removed restriction to TYPO3 4.2 as highest TYPO3 version

2008-08-30 Martin Holtz <typo3@martinholtz.de>

	* Fixed bug #1150: incorrect sql with emptySearchAtStart

2008-02-29  Michiel Roos  <extensions@netcreators.com>

	* Fixed bug #8122: Toogle doesn't work

2008-02-25	Dmitry Dulepov	<dmitry@typo3.org>

	* Renamed JavaScript functions to have extension id as prefix
	* Moved all inline CSS styles to CSS classes
	* Changed expand/collapse in dynamic view to use CSS classes instead of inline style (to be print-friendly)
	* Commented obsolete TS template named "CSS default styles"
	* Fixed icon paths: did not expand from constants at some TYPO3 installations
	* Added hook to page module to display extended information (TYPO3>=4.2)

2008-02-22	Dmitry Dulepov	<dmitry@typo3.org>

	* Added posibility to override sys_language_mode/sys_language_overlay for records

2008-02-01	Dmitry Dulepov	<dmitry@typo3.org>
