@@ -3,6 +3,7 @@
 	* Fixed bug #6699: Restore faq_id to the id of the faq
 	* Added feature #6696: Configure sorting order of faq items
 	* Fixed bug #3048: Toggle doesn't work with singleOpen
+	* Added feature: Make inclusion of default JS configurable
 
 2008-12-10	Dmitry Dulepov	<dmitry@typo3.org>
 
